--- a/Project1/Project1.vcxproj.filters
+++ b/Project1/Project1.vcxproj.filters
@@ -29,4 +29,9 @@
       <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="babynames.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
